--- a/src/components/Game/game.scss
+++ b/src/components/Game/game.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
 $light-blue: #D2F1FF;
+$middle-blue: #2B79BB;
 $dark-blue: #08254D;
 $gray:#D9D9D9;
 
@@ -8,45 +11,92 @@ $gray:#D9D9D9;
     align-items: center;
 }
 
+html, body, #root {
+    max-width: 100vw;
+    height: 100vh;
+}
+
+body {
+    background-color: $middle-blue;
+    @include flex-center()
+}
+
 button {
     cursor: pointer;
 }
 
+img {
+    width: 28px;
+}
+
 .game-box {
     display: flex;
+    flex-direction: column;
+
+    .game {
+        display: flex;
+        flex-direction: row;
+    }
 
     .placeholders-row {
+        background-color: $dark-blue;
         display: flex;
+        padding: 4px;
+        border-radius: 4px;
+        
+        &:not(:nth-child(6)) {
+            margin-bottom: 4px;
+        }
     
         .single-placeholder {
+            @include flex-center();
             width: 38px;
             height: 60px;
+            border-radius: 4px;
             background-color: $light-blue;
-            margin: 5px;
+
+            &:not(:nth-child(4)) {
+                margin-right: 5px
+            }
         }
+
+        
         
     }
     
     .current-result-row {
         @include flex-center();
+        justify-content: space-between;
         background-color: $dark-blue;
+        padding: 24px 10px;
         width: 122px;
-        height: 66px;
-        margin: 5px;
+        height: 67.2px;
+        margin-bottom: 5px;
+        margin-left: 8px;
+        border-radius: 4px;
     
         .circle {
             background-color: $gray;;
-            width: 20px;
-            height: 20px;
+            width: 22px;
+            height: 22px;
             border-radius: 50%;
         }
         
     }
+
+    .result {
+      max-width: 176px;
+      margin-top: 30px;
+      margin-bottom: 10px;
+    }
+
 }
 
 .game-icons {
+    max-width: 300px;
     background-color: $dark-blue;
     display: flex;
+    border-radius: 4px;
 
     .icon-box {
         @include flex-center();
@@ -54,5 +104,22 @@ button {
         width: 48px;
         height: 48px;
         margin: 3px;
+        border: none;
+        border-radius: 4px;
+        box-shadow: 3px -3px 1px 0px #00000036 inset, -3px 3px 2px 0px #FFFFFFE5 inset;
+
     }
+}
+
+.accept-bttn {
+    font-family: 'Fredoka One', cursive;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 22px;
+    padding: 14px 34px;
+    background-color: $dark-blue;
+    color: #FFF;
+    border: none;
+    border-radius: 4px;
 }
