--- a/src/components/Game/game.scss
+++ b/src/components/Game/game.scss
@@ -86,11 +86,29 @@ img {
         
     }
 
-    .result {
-      max-width: 176px;
-      margin-top: 16px;
-      margin-bottom: 10px;
+    .result-and-undo {
+        display: flex;
+
+        .result {
+          max-width: 176px;
+          margin-top: 16px;
+          margin-bottom: 10px;
+        }
+
+        .undo {
+            font-family: 'Fredoka One', cursive;
+            text-transform: uppercase;
+            background-color: $dark-blue;
+            border: none;
+            border-radius: 4px;
+            color: #fff;
+            padding: 0 14px;
+            height: 50px;
+            margin-left: 40px;
+            margin-top: 32px;
+        }
     }
+
 
 }
 
