--- a/src/components/StartGame/start-game.scss
+++ b/src/components/StartGame/start-game.scss
@@ -1,3 +1,84 @@
-.start {
-    color: red;
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
+@mixin flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+$light-blue: #D2F1FF;
+$middle-blue: #2B79BB;
+$dark-blue: #08254D;
+$gray:#D9D9D9;
+$yellow: #FFFA7F;
+$red : #F8443A;
+
+
+html, body, #root {
+    width: 100vw;
+    height: 100vh;
+}
+
+#root {
+    @include flex-center();
+    font-family: 'Fredoka One', cursive;
+
+    .start-game-box {
+        width: 95%;
+        max-width: 400px;
+        height: 100%;
+
+        h1 {
+            color: $light-blue;
+            text-align: center;
+            margin-bottom: 30px;
+            font-size: 36px;
+            text-transform: uppercase;
+            text-shadow: 2px 2px 0px 0px #00000085;
+        }
+
+        p {
+            color: #fff;
+            margin: 10px 0 ;
+        }
+
+        .symbols {
+            p {
+                display: flex;
+                align-items: center;
+            }
+
+            .circle {
+                width: 25px;
+                height: 25px;
+                border-radius: 50%;
+                margin-right: 10px;
+    
+                &.red {
+                    background-color: $red;
+                }
+    
+                &.yellow {
+                    background-color: $yellow;
+                }
+            }
+        }
+
+        .start-game-bttn { 
+            margin: 50px;
+            width: 135px;
+            height: 50px;
+            background-color: $light-blue;
+            color: $dark-blue;
+            text-decoration: none;
+            border: none;
+            border-radius: 4px;
+            box-shadow: 3px -3px 1px 0px #00000040 inset, -3px 3px 2px 0px #FFFFFFE5 inset;
+            padding: 16px 35px;
+            
+        }
+    }
+
+
+}
+
