--- a/src/components/Game/game.scss
+++ b/src/components/Game/game.scss
@@ -19,7 +19,6 @@ html, body, #root {
 
 body {
     background-color: $middle-blue;
-    @include flex-center()
 }
 
 button {
@@ -33,7 +32,7 @@ img {
 .game-box {
     display: flex;
     flex-direction: column;
-    margin-top: 8px;
+    margin-top: -50px;
 
     .game {
         display: flex;
@@ -104,16 +103,15 @@ img {
             color: #fff;
             padding: 0 14px;
             height: 50px;
-            margin-left: 40px;
-            margin-top: 32px;
+            margin-left: 36px;
+            margin-top: 25px;
         }
     }
-
-
 }
 
 .game-icons {
     max-width: 300px;
+    padding: 2px;
     background-color: $dark-blue;
     display: flex;
     border-radius: 4px;
@@ -160,4 +158,37 @@ img {
     padding: 8px;
     border: 3px solid $dark-blue;
     border-radius: 50px;
+}
+
+#modal {
+    background-color: rgba($color: $middle-blue, $alpha: 0.9);
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+
+
+    &:empty {
+        display: none;
+    }
+
+    button {
+        font-family: 'Fredoka One', cursive;
+        font-size: 16px;
+        width: 135px;
+        height: 50px;
+        background-color: $light-blue;
+        color: $dark-blue;
+        border: none;
+        border-radius: 4px;
+        display: block;
+        margin-top: 20px;
+        box-shadow: 3px -3px 1px 0px #00000040 inset, -3px 3px 2px 0px #FFFFFFE5 inset;
+    }
 }
