Changed directory of StartGame and Game pages

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
-@import './components/StartGame/start-game.scss';
-@import './components/Game/game.scss';
+@import './pages/StartGame/start-game.scss';
+@import './pages/Game/game.scss';
 
 * {
   margin: 0;
