--- a/src/pages/Game/game.scss
+++ b/src/pages/Game/game.scss
@@ -1,17 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
-$light-blue: #D2F1FF;
-$middle-blue: #2B79BB;
-$dark-blue: #08254D;
-$gray:#D9D9D9;
-$yellow: #FFFA7F;
-
-@mixin flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 html, body, #root {
     max-width: 100vw;
     height: 100vh;
@@ -37,56 +25,31 @@ img {
     .game {
         display: flex;
         flex-direction: row;
+    }      
     }
 
-    .placeholders-row {
-        background-color: $dark-blue;
+    .countdown-and-bttns {
         display: flex;
-        padding: 4px;
-        border-radius: 4px;
+        margin-bottom: 10px;
         
-        &:not(:nth-child(6)) {
-            margin-bottom: 4px;
-        }
-    
-        .single-placeholder {
-            @include flex-center();
-            width: 38px;
-            height: 60px;
-            border-radius: 4px;
+        .back-home-bttn, .play-again-bttn {
+            color: $dark-blue;
+            font-family: 'Fredoka One', cursive;
             background-color: $light-blue;
+            padding: 10px 8px;
+            margin: 3px;
+            border: none;
+            border-radius: 4px;
+            box-shadow: 3px -3px 1px 0px #00000036 inset, -3px 3px 2px 0px #FFFFFFE5 inset;
 
-            &:not(:nth-child(4)) {
-                margin-right: 5px
-            }
         }
-
-        
-        
-    }
-    
-    .current-result-row {
-        @include flex-center();
-        justify-content: space-between;
-        background-color: $dark-blue;
-        padding: 24px 10px;
-        width: 122px;
-        height: 67.2px;
-        margin-bottom: 5px;
-        margin-left: 8px;
-        border-radius: 4px;
-    
-        .circle {
-            background-color: $gray;;
-            width: 22px;
-            height: 22px;
-            border-radius: 50%;
-        }
-        
     }
 
     .result-and-undo {
+        margin-top: 10px;
+        margin-bottom: 10px;
         display: flex;
+        align-items: center;
 
         .result {
           max-width: 176px;
@@ -104,91 +67,6 @@ img {
             padding: 0 14px;
             height: 50px;
             margin-left: 36px;
-            margin-top: 25px;
+            margin-top: 0px;
         }
     }
-}
-
-.game-icons {
-    max-width: 300px;
-    padding: 2px;
-    background-color: $dark-blue;
-    display: flex;
-    border-radius: 4px;
-
-    .icon-box {
-        @include flex-center();
-        background-color: $light-blue;
-        width: 48px;
-        height: 48px;
-        margin: 3px;
-        border: none;
-        border-radius: 4px;
-        box-shadow: 3px -3px 1px 0px #00000036 inset, -3px 3px 2px 0px #FFFFFFE5 inset;
-
-    }
-}
-
-.accept-bttn {
-    font-family: 'Fredoka One', cursive;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 22px;
-    padding: 14px 34px;
-    background-color: $dark-blue;
-    color: #FFF;
-    border: none;
-    border-radius: 4px;
-
-    &:disabled {
-        opacity: 0.8;
-    }
-}
-
-.countdown {
-    background-color: $yellow;
-    @include flex-center();
-    font-size: 26px;
-    font-family: 'Fredoka One', cursive;
-    width: 45px;
-    height: 45px;
-    margin: 0 auto;
-    margin-bottom: 5px;
-    padding: 8px;
-    border: 3px solid $dark-blue;
-    border-radius: 50px;
-}
-
-#modal {
-    background-color: rgba($color: $middle-blue, $alpha: 0.9);
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    z-index: 10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-
-
-    &:empty {
-        display: none;
-    }
-
-    button {
-        font-family: 'Fredoka One', cursive;
-        font-size: 16px;
-        width: 135px;
-        height: 50px;
-        background-color: $light-blue;
-        color: $dark-blue;
-        border: none;
-        border-radius: 4px;
-        display: block;
-        margin-top: 20px;
-        box-shadow: 3px -3px 1px 0px #00000040 inset, -3px 3px 2px 0px #FFFFFFE5 inset;
-    }
-}
