--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,5 @@
-@import './pages/StartGame/start-game.scss';
-@import './pages/Game/game.scss';
+@import '../pages/StartGame/start-game.scss';
+@import '../pages/Game/game.scss';
 
 * {
   margin: 0;
