Minor changes and code improvements

--- a/src/components/AcceptButton/accept-button.scss
+++ b/src/components/AcceptButton/accept-button.scss
@@ -1,6 +1,6 @@
 @import '../../style/colors';
 
-.accept-bttn {
+.accept-btn {
     font-family: 'Fredoka One', cursive;
     position: absolute;
     left: 50%;
