--- a/src/components/Placeholders/placeholders.scss
+++ b/src/components/Placeholders/placeholders.scss
@@ -1,5 +1,5 @@
-@import '../../style/colors';
-@import '../../style/mixins';
+@import '../../styles/colors';
+@import '../../styles/mixins';
 
 .placeholders-row {
     background-color: $dark-blue;
