--- a/src/components/Countdown/countdown.scss
+++ b/src/components/Countdown/countdown.scss
@@ -1,5 +1,5 @@
-@import '../../style/colors';
-@import '../../style/mixins';
+@import '../../styles/colors';
+@import '../../styles/mixins';
 
 .countdown {
     background-color: $yellow;
@@ -13,4 +13,8 @@
     padding: 8px;
     border: 3px solid $dark-blue;
     border-radius: 50px;
+
+    &.completed {
+        background-color: $red;
+    }
 }
