--- a/src/components/CurrentResult/current-result.scss
+++ b/src/components/CurrentResult/current-result.scss
@@ -1,5 +1,5 @@
-@import '../../style/colors';
-@import '../../style/mixins';
+@import '../../styles/colors';
+@import '../../styles/mixins';
 
 .current-result-row {
     @include flex-center();
