--- a/src/pages/StartGame/start-game.scss
+++ b/src/pages/StartGame/start-game.scss
@@ -1,5 +1,5 @@
-@import '../../style/colors';
-@import '../../style/mixins';
+@import '../../styles/colors';
+@import '../../styles/mixins';
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 html, body, #root {
