--- a/src/pages/Game/game.scss
+++ b/src/pages/Game/game.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 html, body, #root {
-    max-width: 100vw;
+    max-width: 100%;
     height: 100vh;
 }
 
@@ -46,8 +46,8 @@ img {
     }
 
     .result-and-undo {
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-top: 5px;
+        margin-bottom: 5px;
         display: flex;
         align-items: center;
 
